--- a/tests/notebooks/tests/topic_modeling.ipynb
+++ b/tests/notebooks/tests/topic_modeling.ipynb
@@ -13,9 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Load LAPD newsgroups data\n",
     "prepare the dataset we’ll be working with.\n",
@@ -25,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -67,18 +63,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Preprocessing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Remove emails and newline characters using regex"
    ]
@@ -86,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -127,9 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Tokenize, lowercase and clean-up text"
    ]
@@ -137,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -172,9 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Create Bigram and Trigram Models"
    ]
@@ -182,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -221,9 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Remove Stopwords, Make Bigrams and Lemmatize"
    ]
@@ -231,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -295,9 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Create the Dictionary and Corpus needed for Topic Modeling"
    ]
@@ -305,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -355,9 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Building the Topic Model"
    ]
@@ -365,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We have everything required to train the LDA model. \n",
@@ -380,7 +350,8 @@
     "\n",
     "# Build LDA model\n",
     "NUM_TOPICS = 20\n",
-    "lda_model = gensim.models.LdaMulticore(corpus=bow_corpus,\n",
+    "corpus = bow_corpus\n",
+    "lda_model = gensim.models.LdaMulticore(corpus=corpus,\n",
     "                                           id2word=id2word,\n",
     "                                           num_topics=NUM_TOPICS, \n",
     "                                           random_state=100,\n",
@@ -393,9 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## View the topics in LDA model"
    ]
@@ -403,9 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -505,7 +472,7 @@
     "from pprint import pprint\n",
     "pprint(lda_model.print_topics())\n",
     "# lda_model.print_topics()\n",
-    "doc_lda = lda_model[bow_corpus]"
+    "doc_lda = lda_model[corpus]"
    ]
   },
   {
@@ -538,7 +505,7 @@
     "from gensim.models.coherencemodel import CoherenceModel\n",
     "\n",
     "# Compute Perplexity\n",
-    "print('\\nPerplexity: ', lda_model.log_perplexity(bow_corpus))  # a measure of how good the model is. lower the better.\n",
+    "print('\\nPerplexity: ', lda_model.log_perplexity(corpus))  # a measure of how good the model is. lower the better.\n",
     "\n",
     "# Compute Coherence Score\n",
     "# https://rare-technologies.com/what-is-topic-coherence/\n",
@@ -783,7 +750,7 @@
     "# Visualize the topics\n",
     "import pyLDAvis.gensim\n",
     "pyLDAvis.enable_notebook()\n",
-    "vis = pyLDAvis.gensim.prepare(lda_model, bow_corpus, id2word)\n",
+    "vis = pyLDAvis.gensim.prepare(lda_model, corpus, id2word)\n",
     "vis\n",
     "\n",
     "# Each bubble on the left-hand side plot represents a topic. The larger the bubble, the more prevalent is that topic.\n",
@@ -808,7 +775,7 @@
     "# Download File: http://mallet.cs.umass.edu/dist/mallet-2.0.8.zip\n",
     "from gensim.models.wrappers import LdaMallet\n",
     "mallet_path = '~/dev/py/nlpy/3rd-party/mallet-2.0.8/bin/mallet' # update this path\n",
-    "ldamallet = LdaMallet(mallet_path, corpus=bow_corpus, num_topics=NUM_TOPICS, id2word=id2word)"
+    "ldamallet = LdaMallet(mallet_path, corpus=corpus, num_topics=NUM_TOPICS, id2word=id2word)"
    ]
   },
   {
@@ -1001,7 +968,7 @@
     "start=60; limit=80; step=5;\n",
     "model_list, coherence_values = compute_coherence_values(\n",
     "    dictionary=id2word, \n",
-    "    corpus=bow_corpus, \n",
+    "    corpus=corpus, \n",
     "    texts=data_lemmatized, \n",
     "    start=start, \n",
     "    limit=limit, \n",
@@ -1056,19 +1023,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# TODO: OLD"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Running LDA/LSI using Bag of Words"
    ]
@@ -1076,9 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Gensim LDA and LSI models using BOW corpus.\n",
@@ -1112,9 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For each topic, print the first 5 most representative topics.\n",
@@ -1137,9 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let’s now put the models to work and transform unseen documents to their topic distribution:\n",
@@ -1167,10 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Running LDA/LSI using TF-IDF"
    ]
@@ -1178,9 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tfidf = models.TfidfModel(bow_corpus)\n",
@@ -1196,9 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For each topic, print the first 5 most representative topics.\n",
@@ -1221,8 +1170,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Using Scikit-Learn for Topic Modeling"
@@ -1345,7 +1293,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Plotting words and documents in 2D with SVD"
