--- a/tests/notebooks/tests/San_Francisco_Crime_Classification.ipynb
+++ b/tests/notebooks/tests/San_Francisco_Crime_Classification.ipynb
@@ -1,6 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# San Francisco Crime Classification\n",
+    "\n",
+    "Predict the category of crimes that occurred in the city by the bay.\n",
+    "<br>https://www.kaggle.com/c/sf-crime\n",
+    "\n",
+    "## Data fields\n",
+    "- Dates - timestamp of the crime incident\n",
+    "- Category - category of the crime incident (only in train.csv). This is the target variable you are going to predict.\n",
+    "- Descript - detailed description of the crime incident (only in train.csv)\n",
+    "- DayOfWeek - the day of the week\n",
+    "- PdDistrict - name of the Police Department District\n",
+    "- Resolution - how the crime incident was resolved (only in train.csv)\n",
+    "- Address - the approximate street address of the crime incident \n",
+    "- X - Longitude\n",
+    "- Y - Latitude\n",
+    "\n",
+    "## Categories\n",
+    "- ARSON\n",
+    "- ASSAULT\n",
+    "- BAD CHECKS\n",
+    "- BRIBERY\n",
+    "- BURGLARY\n",
+    "- DISORDERLY CONDUCT\n",
+    "- DRIVING UNDER THE INFLUENCE\n",
+    "- DRUG/NARCOTIC\n",
+    "- DRUNKENNESS\n",
+    "- EMBEZZLEMENT\n",
+    "- EXTORTION\n",
+    "- FAMILY OFFENSES\n",
+    "- FORGERY/COUNTERFEITING\n",
+    "- FRAUD\n",
+    "- GAMBLING\n",
+    "- KIDNAPPING\n",
+    "- LARCENY/THEFT\n",
+    "- LIQUOR LAWS\n",
+    "- LOITERING\n",
+    "- MISSING PERSON\n",
+    "- NON-CRIMINAL\n",
+    "- OTHER OFFENSES\n",
+    "- PORNOGRAPHY/OBSCENE MAT\n",
+    "- PROSTITUTION\n",
+    "- RECOVERED VEHICLE\n",
+    "- ROBBERY\n",
+    "- RUNAWAY\n",
+    "- SECONDARY CODES\n",
+    "- SEX OFFENSES FORCIBLE\n",
+    "- SEX OFFENSES NON FORCIBLE\n",
+    "- STOLEN PROPERTY\n",
+    "- SUICIDE\n",
+    "- SUSPICIOUS OCC\n",
+    "- TREA\n",
+    "- TRESPASS\n",
+    "- VANDALISM\n",
+    "- VEHICLE THEFT\n",
+    "- WARRANTS\n",
+    "- WEAPON LAWS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,7 +72,7 @@
     "from pyspark import SparkContext\n",
     "sc = SparkContext()\n",
     "sqlContext = SQLContext(sc)\n",
-    "data = sqlContext.read.format('com.databricks.spark.csv').options(header='true', inferschema='true').load('data/SF-CRIME/train.csv')\n"
+    "data = sqlContext.read.format('com.databricks.spark.csv').options(header='true', inferschema='true').load('../../../data/SF-CRIME/train.csv')\n"
    ]
   },
   {
@@ -175,6 +237,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
