--- a/tests/notebooks/tests/wordcloud_api_test.ipynb
+++ b/tests/notebooks/tests/wordcloud_api_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,20 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"human cognition\": 1,\n",
-      "    \"google 's google brain and deepmind unit\": 1,\n",
-      "    \"model\": 1,\n",
-      "    \"machine learning\": 1,\n",
-      "    \"scientist\": 1,\n",
-      "    \"computer\": 1,\n",
-      "    \"the world\": 1,\n",
-      "    \"ai\": 1,\n",
-      "    \"a way\": 1,\n",
-      "    \"network\": 1,\n",
-      "    \"relation\": 1,\n",
-      "    \"thing\": 1\n",
+      "    \"thrun\": 1,\n",
+      "    \"now the co - founder and ceo\": 1,\n",
+      "    \"google\": 1,\n",
+      "    \"the company\": 1,\n",
+      "    \"-PRON- hand\": 1,\n",
+      "    \"sebastian thrun\": 1,\n",
+      "    \"startup udacity\": 1,\n",
+      "    \"recode\": 1,\n",
+      "    \"online high education\": 1,\n",
+      "    \"few people\": 1,\n",
+      "    \"very senior ceo\": 1,\n",
+      "    \"major american \\n car company\": 1,\n",
+      "    \"an interview\": 1,\n",
+      "    \"self - drive car\": 1\n",
       "}\n"
      ]
     }
@@ -30,7 +32,7 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "file = '../../docs/text3'\n",
+    "file = '../../docs/text1'\n",
     "with open(file, 'r') as f:\n",
     "    text = f.read()\n",
     "    # available methods are: 'noun_chunks', 'entities', 'tokens', 'gensim'\n",
@@ -59,6 +61,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
