--- a/tests/notebooks/tests/nlp_api_test.ipynb
+++ b/tests/notebooks/tests/nlp_api_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,58 +10,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
+      "    \"text\": \"\",\n",
       "    \"entities\": [],\n",
       "    \"relations\": [\n",
       "        [\n",
-      "            \"Minister Yuval Steinitz\",\n",
-      "            \"said\",\n",
+      "            \"Peter W. Battaglia\",\n",
       "            null,\n",
-      "            \"Sunday that\"\n",
-      "        ],\n",
-      "        [\n",
-      "            \"Israel\",\n",
-      "            \"overthrow\",\n",
-      "            \"Hamas\",\n",
+      "            \"Google's DeepMind\",\n",
       "            null\n",
       "        ],\n",
       "        [\n",
-      "            \"Minister Yuval Steinitz\",\n",
-      "            \"attends\",\n",
-      "            \"Knesset\",\n",
-      "            \"May 23, 2018\"\n",
-      "        ],\n",
-      "        [\n",
-      "            \"Haaretz\",\n",
-      "            \"reported\",\n",
-      "            null,\n",
-      "            \"Sunday that\"\n",
-      "        ],\n",
-      "        [\n",
-      "            \"the\",\n",
-      "            \"day on\",\n",
-      "            null,\n",
-      "            \"August 9\"\n",
-      "        ],\n",
-      "        [\n",
-      "            \"Palestinian\",\n",
-      "            \"reports of\",\n",
-      "            \"strike\",\n",
-      "            null\n",
-      "        ],\n",
-      "        [\n",
-      "            \"7,000\",\n",
-      "            \"acres of\",\n",
-      "            \"land\",\n",
-      "            null\n",
-      "        ],\n",
-      "        [\n",
-      "            \"Mazen Faqha\",\n",
-      "            \"official\",\n",
-      "            \"Hamas\",\n",
+      "            \"Gary Marcus\",\n",
+      "            \"professor\",\n",
+      "            \"NYU\",\n",
       "            null\n",
       "        ]\n",
-      "    ],\n",
-      "    \"text\": \"\"\n",
+      "    ]\n",
       "}\n"
      ]
     }
@@ -70,7 +34,7 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "file = '../../docs/text6'\n",
+    "file = '../../docs/text4'\n",
     "with open(file, 'r') as f:\n",
     "    text = f.read()\n",
     "    data = {'text': text, 'model': 'en'}\n",
@@ -82,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
