--- a/tests/notebooks/tests/textcat.ipynb
+++ b/tests/notebooks/tests/textcat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,26 @@
     "from spacy.util import minibatch, decaying, compounding\n",
     "\n",
     "use_titles = False\n",
-    "do_clean_text = False\n",
+    "do_clean_text = True\n",
     "model = 'en_core_web_sm'\n",
     "#model = 'en_core_web_lg'"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def load_data(path):\n",
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,10 +174,11 @@
     "        for i in range(n_iter):\n",
     "            losses = {}\n",
     "            # batch up the examples using spaCy's minibatch\n",
-    "            batches = minibatch(train_data, size=compounding(4., 32., 1.001))\n",
-    "            for batch in batches:\n",
+    "#             batches = minibatch(train_data, size=compounding(4., 32., 1.001))\n",
+    "#             for batch in batches:\n",
+    "            for batch in minibatch(train_data, size=compounding(64., 128., 1.001)):\n",
     "                texts, annotations = zip(*batch)\n",
-    "                nlp.update(texts, annotations, sgd=optimizer, drop=0.2, losses=losses)\n",
+    "                nlp.update(texts, annotations, sgd=optimizer, losses=losses, drop=0.3)\n",
     "            with textcat.model.use_params(optimizer.averages):\n",
     "                # evaluate on the dev data split off in load_data()\n",
     "                scores = evaluate(nlp.tokenizer, textcat, dev_texts, dev_cats)\n",
@@ -291,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -303,33 +308,25 @@
       "\n",
       "loading data from '../../../data/lapd.labeled'...\n",
       "\n",
-      "Using 2576 examples (2060 training, 516 evaluation)\n",
+      "cleaning texts...\n",
+      "clean texts completed.\n",
+      "\n",
+      "Using 14174 examples (11339 training, 2835 evaluation)\n",
       "Warning: Unnamed vectors -- this won't allow multiple vectors models to be loaded. (Shape: (0, 0))\n",
       "Training the model...\n",
       "LOSS \t  P  \t  R  \t  F  \n",
-      "284.916\t0.830\t0.560\t0.669\n",
-      "192.693\t0.815\t0.614\t0.701\n",
-      "160.321\t0.832\t0.612\t0.705\n",
-      "138.356\t0.822\t0.626\t0.711\n",
-      "117.431\t0.818\t0.651\t0.725\n",
-      "103.731\t0.796\t0.649\t0.715\n",
-      "95.596\t0.793\t0.647\t0.713\n",
-      "89.203\t0.790\t0.649\t0.713\n",
-      "90.005\t0.785\t0.630\t0.699\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-d52a575e5758>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Done.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-45-d52a575e5758>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(data_dir)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnlp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclean_texts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-44-2743177a9951>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(nlp, texts, labels, split, n_iter)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbatches\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m                 \u001b[0mtexts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mannotations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m                 \u001b[0mnlp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mannotations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msgd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdrop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlosses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlosses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mtextcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m                 \u001b[0;31m# evaluate on the dev data split off in load_data()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/py/nlpy/env/lib/python3.5/site-packages/spacy/language.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, docs, golds, drop, sgd, losses)\u001b[0m\n\u001b[1;32m    403\u001b[0m                 \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_doc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    404\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgold\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGoldParse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 405\u001b[0;31m                 \u001b[0mgold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGoldParse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mgold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    406\u001b[0m             \u001b[0mdoc_objs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m             \u001b[0mgold_objs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "150.041\t0.847\t0.529\t0.652\n",
+      "76.033\t0.861\t0.579\t0.692\n",
+      "65.551\t0.857\t0.602\t0.708\n",
+      "59.823\t0.842\t0.616\t0.711\n",
+      "54.522\t0.834\t0.636\t0.722\n",
+      "50.201\t0.822\t0.650\t0.726\n",
+      "48.547\t0.814\t0.655\t0.726\n",
+      "46.741\t0.815\t0.662\t0.730\n",
+      "46.379\t0.814\t0.662\t0.730\n",
+      "44.675\t0.809\t0.660\t0.727\n",
+      "\n",
+      "Done.\n"
      ]
     }
    ],
@@ -345,7 +342,8 @@
     "    data_dir = Path(data_dir)\n",
     "    texts = []\n",
     "    labels = []\n",
-    "    for year in ['2018', '2016', '2015', '2014', '2013']:\n",
+    "    for year in ['2013', '2014', '2015', '2017', '2018']:\n",
+    "    #for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2017', '2018']:\n",
     "        t, l = load_data(data_dir / 'lapd_news_{}.csv'.format(year))\n",
     "        texts = texts + t\n",
     "        labels = labels + l\n",
