--- a/tests/notebooks/tests/textcat-01.ipynb
+++ b/tests/notebooks/tests/textcat-01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +25,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def load_data(path):\n",
@@ -41,42 +45,34 @@
     "    true_labels = []\n",
     "    with path.open('r') as file_:\n",
     "        for row in csv.DictReader(file_, delimiter=','):\n",
-    "            # text\n",
     "            text = row['title'] if use_titles else row['text']\n",
-    "            texts.append(text)\n",
-    "            # labels\n",
-    "            raw_labels = row['labels'] # could be multiple labels per row (sparated by ';')\n",
-    "            labels = list(map(lambda label: label.strip(), raw_labels.split(';')))\n",
-    "            true_labels.append(labels)\n",
-    "                \n",
+    "            labels = row['labels'] # could be multiple labels per row\n",
+    "            for label in labels.split(';'):\n",
+    "                texts.append(text)\n",
+    "                true_labels.append(label.strip())\n",
     "    return texts, true_labels\n",
     "\n",
     "\n",
     "def format_data_for_spacy(texts, labels, all_labels):\n",
-    "    ys = []    \n",
-    "    for true_labels in labels:\n",
+    "    ys = []\n",
+    "    for true_label in labels:\n",
     "        cats = {wrong_label: 0.0 for wrong_label in all_labels}\n",
-    "        for true_label in true_labels:\n",
-    "            cats[true_label] = 1.0\n",
+    "        cats[true_label] = 1.0\n",
     "        ys.append({'cats': cats})\n",
     "    return list(zip(texts, ys))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Clean text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -133,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(nlp, texts, labels, split=0.8, n_iter=20):\n",
+    "def train(nlp, texts, labels, split=0.8, n_iter=10):\n",
     "    \n",
     "    # add the text classifier to the pipeline if it doesn't exist\n",
     "    # nlp.create_pipe works for built-ins that are registered with spaCy\n",
@@ -149,12 +145,7 @@
     "        textcat = nlp.get_pipe('textcat')\n",
     "\n",
     "    # add labels\n",
-    "    labels2 = []\n",
-    "    for labels_ in labels:\n",
-    "        for label in labels_:\n",
-    "            labels2.append(label)\n",
-    "    \n",
-    "    label_set = set(labels2)\n",
+    "    label_set = set(labels)\n",
     "    for label in label_set:\n",
     "        textcat.add_label(label)\n",
     "    \n",
@@ -182,7 +173,8 @@
     "        for i in range(n_iter):\n",
     "            losses = {}\n",
     "            # batch up the examples using spaCy's minibatch\n",
-    "            #for batch in minibatch(train_data, size=compounding(16., 128., 1.01)):\n",
+    "#             batches = minibatch(train_data, size=compounding(4., 32., 1.001))\n",
+    "#             for batch in batches:\n",
     "            for batch in minibatch(train_data, size=128):\n",
     "                texts, annotations = zip(*batch)\n",
     "                nlp.update(texts, annotations, sgd=optimizer, losses=losses, drop=0.3)\n",
@@ -205,14 +197,14 @@
     "        for label, score in doc.cats.items():\n",
     "            if label not in gold:\n",
     "                continue\n",
-    "            if score >= 0.8 and gold[label] >= 0.5:\n",
+    "            if score >= 0.5 and gold[label] >= 0.5:\n",
     "                tp += 1.\n",
-    "            elif score >= 0.8 and gold[label] < 0.5:\n",
+    "            elif score >= 0.5 and gold[label] < 0.5:\n",
     "                fp += 1.\n",
     "                fp_texts.append((label, texts[i]))\n",
-    "            elif score < 0.8 and gold[label] < 0.5:\n",
+    "            elif score < 0.5 and gold[label] < 0.5:\n",
     "                tn += 1\n",
-    "            elif score < 0.8 and gold[label] >= 0.5:\n",
+    "            elif score < 0.5 and gold[label] >= 0.5:\n",
     "                fn += 1\n",
     "                fn_texts.append((label, texts[i]))\n",
     "    precision = tp / (tp + fp)\n",
@@ -230,66 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading model 'en_core_web_sm'...\n",
-      "\n",
-      "loading data from '../../../data/lapd.labeled'...\n",
-      "\n",
-      "cleaning texts...\n",
-      "clean texts completed.\n",
-      "\n",
-      "Using 4879 examples (3903 training, 976 evaluation)\n",
-      "Warning: Unnamed vectors -- this won't allow multiple vectors models to be loaded. (Shape: (0, 0))\n",
-      "Training the model...\n",
-      "LOSS \t  P  \t  R  \t  F  \n",
-      "153.868\t0.233\t0.661\t0.344\n",
-      "56.401\t0.326\t0.616\t0.426\n",
-      "41.928\t0.802\t0.578\t0.672\n",
-      "16.774\t0.925\t0.500\t0.649\n",
-      "14.877\t0.951\t0.506\t0.661\n",
-      "13.817\t0.959\t0.516\t0.671\n",
-      "13.369\t0.971\t0.526\t0.682\n",
-      "12.617\t0.974\t0.538\t0.693\n",
-      "11.785\t0.979\t0.545\t0.700\n",
-      "10.997\t0.982\t0.587\t0.735\n",
-      "10.231\t0.987\t0.639\t0.776\n",
-      "9.684\t0.989\t0.680\t0.806\n",
-      "9.149\t0.990\t0.698\t0.819\n",
-      "8.499\t0.992\t0.708\t0.826\n",
-      "7.641\t0.997\t0.735\t0.846\n",
-      "7.154\t0.997\t0.758\t0.862\n",
-      "6.890\t0.997\t0.761\t0.864\n",
-      "6.737\t0.994\t0.765\t0.865\n",
-      "6.773\t0.988\t0.778\t0.870\n",
-      "6.481\t0.988\t0.777\t0.870\n",
-      "\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main(data_dir = '../../../data/lapd.labeled'):\n",
     "    \n",
     "    print(\"loading model '{}'...\".format(model))\n",
     "    nlp = spacy.load(model)\n",
+    "    print('model loaded.')\n",
     "\n",
     "    print()\n",
     "    print(\"loading data from '{}'...\".format(data_dir))\n",
     "    data_dir = Path(data_dir)\n",
     "    texts = []\n",
     "    labels = []\n",
-    "    #for year in ['2018']:\n",
     "    for year in ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2018']:\n",
     "    #for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2017', '2018']:\n",
     "        t, l = load_data(data_dir / 'lapd_news_{}.csv'.format(year))\n",
-    "        texts = texts + t   # array concatination\n",
-    "        labels = labels + l # array concatination\n",
+    "        texts = texts + t\n",
+    "        labels = labels + l\n",
     "    \n",
     "    if do_clean_text:\n",
     "        print()\n",
@@ -302,7 +254,7 @@
     "        \n",
     "#     print()\n",
     "#     for i in range(5):\n",
-    "#         print('label:\\t', *labels[i])\n",
+    "#         print('label:\\t', labels[i])\n",
     "#         print('text:\\t', texts[i])\n",
     "#         if do_clean_text:\n",
     "#             print('clean:\\t', clean_texts[i])\n",
